# int-backend

./: .env.example  .gitignore  README.md  database.py  endpoints.py  main.py  push.sh  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py
app/endpoints/: profile.py  signup.py
app/services/ai_avatar/: config.py  main.py
app/services/ai_avatar/api/: routes.py  schemas.py
app/services/ai_avatar/core/: avatar_service.py  session_manager.py
app/services/ai_avatar/mock/: __init__.py
app/shared/: __init__.py  utils.py
backend/: .env.example  README.md  database.py  run.sh
backend/endpoints/: login.py
docs/: postman_collection.json
endpoints/: __init__.py  generic.py  hello.py  login.py  nothello.py  profile.py  signup.py  theai.py
services/ai_avatar/: __init__.py  config.py  main.py  requirements.txt
services/ai_avatar/api/: __init__.py  routes.py
services/ai_avatar/core/: __init__.py  avatar_service.py  question_service.py  session_manager.py  tts_service.py
services/ai_avatar/mock/: question_service.py
